auth 0 working but not pushing into a database
