# routes/index.js
@@ -4,6 +4,6 @@ const router = express.Router();
 router.use('/', require('./swagger'));
 router.use('/events', require('./events'));
 router.use('/venues', require('./venues'));
-
+router.use('/user', require('./auth'))
 
 module.exports = router;
